apps/automation/homeassistant/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: hassproxy
spec:
  virtualhost:
    fqdn: homeassistant.cornerstones.local
  routes:
  - conditions:
    - prefix: /
      enablewebsockets: true
    services:
      - name: homeassistant-home-assistant
        port: 8123
