apps/automation/homeassistant/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.cornerstones.local`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
